--- a/desafios.css
+++ b/desafios.css
@@ -122,3 +122,23 @@ a:hover{
     padding: 20px;
 
 }
+@media (max-width: 768px) {
+
+    .titulo0 {
+        font-size: 28px;
+    }
+
+    .titulo,
+    .titulo2 {
+        font-size: 22px;
+    }
+
+    .p1,
+    .p2 {
+        font-size: 16px;
+        padding: 20px;
+    }
+
+}
+
+
