--- a/desafios.css
+++ b/desafios.css
@@ -7,6 +7,12 @@ body
 {
     background-color: rgb(133, 133, 133);
 }
+
+.container {
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto;
+    
 .titulo
 {
     background-color:rgba(246, 250, 6, 0.76) ;
@@ -14,7 +20,7 @@ body
     color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
-    margin: 40px auto;
+    margin: 15px auto;
     padding: 15px 30px;
     width: 90%;
     max-width: 900px;
@@ -36,8 +42,9 @@ display: block;
     background-color:rgb(0, 0, 0) ;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    padding:50px;
+    font-size: 18px;
+    line-height: 1.6;
+    padding:20px;
     margin:50px auto;
     width: 90%;
     max-width: 900px;
@@ -47,6 +54,8 @@ display: block;
 .lendario-img{
     display: block;
     margin: 0 auto; 
+     width: 100%;
+    height: auto;
 }
 
 
@@ -55,7 +64,7 @@ background-color: rgba(246, 250, 6, 0.76);
 font-size: 40px;
 color: rgb(0, 0, 0);
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-margin: 40px auto;
+margin: 15px auto;
 padding: 15px 30px;
 width: 90%;
 max-width: 900px;
@@ -68,8 +77,9 @@ border: 2px solid black;
 background-color: black;
 color: white;
 font-family: Arial, Helvetica, sans-serif;
-font-size: 30px;
-padding: 50px;
+font-size: 18px;
+line-height: 1.6;
+padding: 20px;
 margin: 50px auto;
 width: 90%;
 max-width: 900px;
@@ -79,6 +89,8 @@ border: 2px solid rgba(246, 250, 6, 0.76);
 .img2{
 display: block;
 margin: 0 auto;
+ width: 100%;
+height: auto;
 
 }
 
@@ -114,7 +126,7 @@ a:hover{
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
-    margin: 40px auto ;
+    margin: 15px auto ;
     text-align: center;
     border: 2px solid rgba(246, 250, 6, 0.76);
     width: 90%;
@@ -140,5 +152,6 @@ a:hover{
     }
 
 }
+
 
 
