--- a/desafios.css
+++ b/desafios.css
@@ -1,139 +1,90 @@
-/*
-****** DESAFIO 1 ******
-*/
-
-
-body
-{
-    background-color: rgb(133, 133, 133);
+/* RESET */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.container {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto;
-    
-.titulo
-{
-    background-color:rgba(246, 250, 6, 0.76) ;
-    font-size: 40px;
-    color: rgb(0, 0, 0);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-    margin: 15px auto;
-    padding: 15px 30px;
-    width: 90%;
-    max-width: 900px;
-    text-align: center;
-    border: 2px solid black;
-
-
-}
-
-#desafio-1
-{
-    
-display: block;
-}
-
-.p1
-{
-
-    background-color:rgb(0, 0, 0) ;
-    color: white;
+/* FUNDO */
+body {
+    background-color: #858585;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 1.6;
-    padding:20px;
-    margin:50px auto;
+}
+
+/* CONTAINER PRINCIPAL */
+#desafio-1 {
     width: 90%;
-    max-width: 900px;
-    border: 2px solid rgba(246, 250, 6, 0.76);
+    max-width: 1000px;
+    margin: 40px auto;
 }
 
-.lendario-img{
-    display: block;
-    margin: 0 auto; 
-     width: 100%;
-    height: auto;
-}
-
-
-.titulo2{
-background-color: rgba(246, 250, 6, 0.76);
-font-size: 40px;
-color: rgb(0, 0, 0);
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-margin: 15px auto;
-padding: 15px 30px;
-width: 90%;
-max-width: 900px;
-text-align: center;
-border: 2px solid black;
-
-}
-
-.p2{
-background-color: black;
-color: white;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 18px;
-line-height: 1.6;
-padding: 20px;
-margin: 50px auto;
-width: 90%;
-max-width: 900px;
-border: 2px solid rgba(246, 250, 6, 0.76);
-}
-
-.img2{
-display: block;
-margin: 0 auto;
- width: 100%;
-height: auto;
-
-}
-
-.link1{
+/* TÍTULO PRINCIPAL */
+.titulo0 {
     background-color: black;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px;
-    margin: 40px auto;
+    font-size: 50px;
     text-align: center;
+    padding: 20px;
     border: 2px solid rgba(246, 250, 6, 0.76);
-   width: 90%;
-     max-width: 900px;
-   padding: 20px;
-
+    margin-bottom: 40px;
 }
 
-a{
-text-decoration:none;
-
+/* TÍTULOS SECUNDÁRIOS */
+.titulo,
+.titulo2 {
+    background-color: rgba(246, 250, 6, 0.76);
+    font-size: 35px;
+    text-align: center;
+    padding: 15px;
+    border: 2px solid black;
+    margin: 30px 0;
 }
 
-a:link, a:visited{
-color: rgba(246, 250, 6, 0.76);
+/* PARÁGRAFOS */
+.p1,
+.p2 {
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 30px;
+    line-height: 1.6;
+    border: 2px solid rgba(246, 250, 6, 0.76);
+    margin-bottom: 30px;
 }
 
-a:hover{
+/* IMAGENS RESPONSIVAS */
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 40px;
+}
+
+/* LINK */
+.link1 {
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    padding: 20px;
+    border: 2px solid rgba(246, 250, 6, 0.76);
+    margin-top: 40px;
+}
+
+a {
+    color: rgba(246, 250, 6, 0.76);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
     text-decoration: underline;
 }
 
-.titulo0{
-    background-color: black;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 60px;
-    margin: 15px auto ;
-    text-align: center;
-    border: 2px solid rgba(246, 250, 6, 0.76);
-    width: 90%;
-    max-width: 900px;
-    padding: 20px;
+/* ========================= */
+/* RESPONSIVIDADE CELULAR */
+/* ========================= */
 
-}
 @media (max-width: 768px) {
 
     .titulo0 {
@@ -151,7 +102,8 @@ a:hover{
         padding: 20px;
     }
 
+    .link1 {
+        font-size: 18px;
+    }
+
 }
-
-
-
