--- a/desafios.css
+++ b/desafios.css
@@ -39,6 +39,11 @@ body {
     border: 2px solid black;
     margin: 30px 0;
 }
+.titulo,
+.titulo2 {
+    width: 100%;
+}
+
 
 /* PARÁGRAFOS */
 .p1,
@@ -51,6 +56,13 @@ body {
     border: 2px solid rgba(246, 250, 6, 0.76);
     margin-bottom: 30px;
 }
+.p1,
+.p2 {
+    margin: 30px auto;
+    width: 100%;
+    max-width: 900px;
+}
+
 
 /* IMAGENS RESPONSIVAS */
 img {
@@ -107,3 +119,4 @@ a:hover {
     }
 
 }
+
